# controller/transaksi.js
@@ -1,20 +1,37 @@
+const { sequelize } = require('../models/index');
 const model = require('../models/index');
 const transaksi = model.transaksi;
 const transaksi_barang = model.transaksi_barang;
+const barang = model.barang;
 exports.getAll = (req, res)=>{
-    transaksi.findAll({
-        raw:true
+    transaksi_barang.findAll({
+        include:[
+            {
+                model:transaksi,
+                as:"transaksi_waktu",
+                required:true,
+            },
+            {
+                model:barang,
+                as:"transaksi_detail",
+                required:true,
+            }
+        ],
+        attributes:[
+            [sequelize.literal('transaksi_waktu.id'),"id"],
+            [sequelize.cast(sequelize.literal('(`transaksi_detail`.hargaBarang * `transaksi_barang`.jumlah)'),'int'), 'totalTransaksi'],
+            [sequelize.literal('transaksi_waktu.waktu'), 'waktu'],
+        ],
+        group:["transaksiWaktuId"]
     }).then(data=>{
-        res.status(200).json({
-            responseCode : 200,
-            reponseMessage:"OK",
-            responseData:data
-        })
+        res.status(200).json(
+            data
+        )
     }).catch(err=>{
+        console.log(err)
         res.status(500).json({
-            responseCode:500,
-            responseMessage:"Error",
-            responseData:err
+            success:false,
+            message:err
         })
     })
 }
@@ -37,15 +54,13 @@ exports.create = (req, res)=>{
             await this.createTransaksiBarang(item, index, id)
         })
         res.status(200).json({
-            responseCode:200,
-            responseMessage:"OK",
-            responseData:data
+            success:true,
+            message:"Data berhasil ditambahkan"
         })
     }).catch(err=>{
         res.status(500).json({
-            responseCode:500,
-            responseMessage:"Error",
-            responseData:err
+            success:false,
+            message:err
         })
     })
 }
@@ -53,20 +68,32 @@ exports.getOne = (req,res)=>{
     transaksi.findOne({
         where:{
             id:req.params.id
-        }
+        },
+        
     }).then(data=>{
         transaksi_barang.findAll({
+            include:[
+                {
+                        model:barang,
+                        as:"transaksi_detail",
+                    required:true,
+                }
+            ],
             where:{
                 transaksiWaktuId:req.params.id
-            }
+            },
+            attributes:[
+                'jumlah'
+            ]
         }).then(data2=>{
             res.status(200).json({
-                responseCode:200,
-                responseMessage:"OK",
-                responsesData:data,
-                responsesData2:data2
+                id:data.id,
+                waktu:data.waktu,
+                totalTransaksi:data2.reduce((a,b)=>a+(b['dataValues']['jumlah'] * b['dataValues']['transaksi_detail']['dataValues']['hargaBarang']),0),
+                barang:data2
             })
         }).catch(err=>{
+            console.log(err)
             res.status(500).json({
                 responseCode:500,
                 responseMessage:"Error",
